N4 jc 24 (#19)
* N4JC-22: start

* N4JC-22 | start chenge inputStream

* N4JC-22 | tests

* N4JC-22 |  inputStreams on parameters. Begining of coding InputStream output on operations

* N4JC-22 | change input and output to inputStream

* N4JC-22 | select and update tests

* N4JC-22 | execute

* N4JC-22 | fix

* N4JC-24

* N4JC-24 | fix metadata

* fix

* Update metadata json files

* N4JC-24 | delete ignored metadata

* imports

* N4JC-24 | format

* fix operations

* N4JC-24: change parent to 1.1.0-SNAPSHOT

* N4JC-24 | add demo mule4

* N4JC-24 | add doc

* N4JC-24 | demo fix

* N4JC-24 | fix demo

* fix